--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "simplebar-react": "^2.4.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
